--- a/_cancelTicket.html
+++ b/_cancelTicket.html
@@ -10,7 +10,7 @@
         <div class="col-xs-12 col-md-8 col-md-offset-2">
             <h5>Items</h5>
             <ul id="_cancelTicket_list"></ul>
-            <div class="text-left" id="_cancelTicket_numItems"></div>
+            <div class="text-left hidden" id="_cancelTicket_numItems" ></div>
         </div>
 
         <div id="cancelTicketCalendarPart" class="col-xs-12 col-md-8 col-md-offset-2">
