--- a/_deliveryTime.html
+++ b/_deliveryTime.html
@@ -305,7 +305,7 @@
         </div>
         <div class="col-xs-12">
             <div class="alert alert-danger fade in" id="delivery-time_warning">
-                <strong>Danger!</strong> You must select a time range for drop-off!
+                Please select a time range for drop-off.
             </div>
         </div>
         <div class="col-xs-12">
