--- a/_driverList.html
+++ b/_driverList.html
@@ -11,10 +11,10 @@
 
         <div class="col-xs-12">
             <div class="input-field">
-                <div class="text-left" id="_driver_numItems"></div>
+                <div id="_driver_numItems"></div>
 
             </div>
-            <h5 id="driver_note"></h5>
+            <div id="driver_note"></div>
         </div>
 
         <div class="col-xs-12">
