--- a/_viewTicket.html
+++ b/_viewTicket.html
@@ -10,7 +10,7 @@
             <ul id="_viewTicket_list"></ul>
         </div>
 
-        <div class="col-xs-4" id="_viewTicket_numItems"></div>
+        <div class="col-xs-4  hidden" id="_viewTicket_numItems" ></div>
 
         <div id="viewTicketCalendarPart" class="col-xs-12 col-md-8 col-md-offset-2">
             <h5 id="viewTicketCalendarHeader">Delivery time</h5>
