--- a/_confirmTicket.html
+++ b/_confirmTicket.html
@@ -1,42 +1,53 @@
 <div class="container box" id="confirmTicket">
     <div class="row text-center">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-            <h2> Confirm your ticket</h2>
+            <h2> Confirm Your Ticket</h2>
         </div>
         <div class="col-xs-12 col-md-8 col-md-offset-2">
             <div>
-                <img style="max-width: 400px;" class="img-circle" id="confirmTicket_img" src="placeholder/person4.png">
+                <img style="max-width: 300px;" class="img-circle" id="confirmTicket_img" src="images/profiles/driver.png">
             </div>
             <div id="confirmTicket_icon"></div>
             <div id="confirmTicket_name">
                 <h5 id="confirmTicket_driverName"></h5>
             </div>
         </div>
+        <div id="user-price-display" class="col-xs-12 col-md-8 col-md-offset-2">
+            <h5>Total Price</h5>
+            <h6>$<span id="user-price-total">55.00</span></h6>
+            <h4>&nbsp;($<span id="user-price">50.00</span> + 10% Driver Delivery Fee)</h4>
+        </div>
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
+            <h5>Receipt</h5>
 
-        <div class="col-xs-12 col-md-8 col-md-offset-2">
-            <h5>Items</h5>
-            <ul id="confirmTicket_list"></ul>
+            <img style="max-width: 100%; width: 400px;" src="images/receipts/receipt.jpg"/>
         </div>
+        <div class="hidden">
+            <div class="col-xs-12 col-md-8 col-md-offset-2">
+                <h5>Items</h5>
+                <ul id="confirmTicket_list"></ul>
+            </div>
 
-        <div class="col-xs-12 col-md-8 col-md-offset-2">
-            <div id="confirmTicket_numItems" class="text-left"></div>
-            <div id="confirmTicket_price" class="text-left"></div>
-            <div id="confirmTicket_total_price" class="text-left"></div>
-        </div>
-        <div class="col-xs-12 col-md-8 col-md-offset-2">
-            <div id="confirmTicket_receipt"></div>
-        </div>
+            <div class="col-xs-12 col-md-8 col-md-offset-2">
+                <div id="confirmTicket_numItems" class=" hidden text-left"></div>
+                <div id="confirmTicket_price" class="text-left"></div>
+                <div id="confirmTicket_total_price" class="text-left"></div>
+            </div>
+            <div class="col-xs-12 col-md-8 col-md-offset-2">
+                <div id="confirmTicket_receipt"></div>
+            </div>
 
-        <div id="confirmTicket_CalendarPart" class="col-xs-12 col-md-8 col-md-offset-2">
-            <h5 id="confirmTicket_CalendarHeader">Delivery Time</h5>
-            <div id="confirmTicket_Calendar"></div>
+            <div id="confirmTicket_CalendarPart" class="col-xs-12 col-md-8 col-md-offset-2">
+                <h5 id="confirmTicket_CalendarHeader">Delivery Time</h5>
+                <div id="confirmTicket_Calendar"></div>
+            </div>
+            <div class="col-xs-12 col-md-8 col-md-offset-2">
+                <h5 id="confirmTicket_location">Delivery Location</h5>
+                <div id="confirmTicket_Map" class="map" style="margin: auto"></div>
+            </div>
         </div>
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-            <h5 id="confirmTicket_location">Delivery Location</h5>
-            <div id="confirmTicket_Map" class="map" style="margin: auto"></div>
-        </div>
-        <div class="col-xs-12 col-md-8 col-md-offset-2">
-
+            <a onclick="goToPage('_history')" type="button" class="btn waves-effects "><< Back</a>
             <a type="button" class="btn waves-effects" id="confirmTicket_button">Confirm</a>
         </div>
     </div>
