--- a/_rateDriver.html
+++ b/_rateDriver.html
@@ -5,7 +5,7 @@
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 userIcon" >
             <!--<h2>Account Information</h2>-->
             <div id="rateDriver-image-content">
-                <img class="img-circle" id="rateDriver-img" src="placeholder/person4.png">
+                <img class="img-circle" id="rateDriver-img" src="images/profiles/driver.png">
             </div>
         </div>
 
