--- a/_rateUser.html
+++ b/_rateUser.html
@@ -4,7 +4,7 @@
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 userIcon">
             <!--<h2>Account Information</h2>-->
             <div id="rateUser-image-content">
-                <img class="img-circle" id="rateUser-img" src="placeholder/person4.png">
+                <img class="img-circle" id="rateUser-img" src="images/profiles/aordookh.png">
             </div>
         </div>
 
