--- a/_shopping.html
+++ b/_shopping.html
@@ -1,11 +1,11 @@
 <div class="container box text-center" id="shopping">
     <div class="row" id="shoppingHeader">
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
             <h2>Shopping List</h2>
         </div>
     </div>
     <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
             <form id="shopping_list_form">
                 <span><input id="shoppingCheckListItem" class="input" type="text" name="checkListItem"
                              placeholder="What do you need?" autocomplete="off"
@@ -17,11 +17,11 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
 
-            <div class="col-xs-4" id="shopping_numItems"></div>
+            <div id="shopping_numItems"></div>
 
-            <div class="col-xs-12">
+            <div class="col-xs-12 col-md-8 col-md-offset-2">
                 <a id="shopping-back" type="button" class="btn waves-effects"><< Back</a>
 
                 <a id="shopping_submit_list" type="button" class="waves-teal btn waves-effects">
