--- a/_shoppingStatus.html
+++ b/_shoppingStatus.html
@@ -1,27 +1,31 @@
 <div id="shoppingStatus" class="container box text-center">
     <div class="row">
-        <div class ="col-xs-offset-4 col-xs-4">
+        <div class="col-xs-offset-4 col-xs-4">
             <img class="img-circle" id="shoppingStatus-img" src="placeholder/person4.png">
             <h2 id="listName_shoppingStatus"></h2>
         </div>
 
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
+            <h5>Items</h5>
             <ul id="_shoppingStatus_list"></ul>
-            <div class="text-left"  id="_shoppingStatus_numItems"></div>
+            <div class="text-left hidden" id="_shoppingStatus_numItems" ></div>
         </div>
 
-        <div id="shoppingStatusCalendarPart" class="col-xs-12">
-            <div id="shoppingStatusCalendarHeader">Delivery time:</div>
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
+            <h5>Special Note</h5>
+            <div id="shoppingstatus_note"></div>
+        </div>
+        <div id="shoppingStatusCalendarPart" class="col-xs-12 col-md-8 col-md-offset-2">
+            <h5 id="shoppingStatusCalendarHeader">Delivery Time</h5>
             <div id="shoppingStatusCalendar"></div>
         </div>
 
-        <div class="col-xs-12">
-            <div id="shoppingstatus_note"></div>
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
             <div id="shoppingstatus_location"></div>
             <div id="shoppingStatusMap" class="map" style="margin: auto"></div>
         </div>
 
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
             <div class="row" id="_shoppingStatus_footerInfo">
                 <a id="shoppingStatus_list_btn" type="button" class="btn waves-effect orange">
                     Close
