--- a/allPages.html
+++ b/allPages.html
@@ -1212,7 +1212,7 @@
             <div class="container box text-center" id="purchasedTickets">
                 <div class="row" id="purchasedTicketsListHeader">
                     <div class="col-xs-offset-4 col-xs-4">
-                        <img class="img-circle" id="purchasedTickets-img" src="placeholder/person4.png">
+                        <img class="img-circle" id="purchasedTickets-img" src="images/profiles/driver.png">
                     </div>
                     <div class="col-xs-12">
                         <h2 id="listName_purchasedTickets"></h2>
