--- a/_homePage.html
+++ b/_homePage.html
@@ -1,35 +1,61 @@
 <section class="container text-center" id="homePage">
 
-    <div class="row marketRow">
-        <figure class="col-xs-6" data-store="vons" >
-            <div class="shop">
+    <div class="row">
+        <figure class="col-xs-0 col-md-0 col-lg-1"></figure>
+        <figure class="col-xs-12 col-md-5 col-lg-4" data-store="vons">
+            <div class="shop  box">
                 <!--<img src="/resources/images/food1.jpg"/>-->
-                <h2 class="name"> Vons </h2></div>
+                <h2 class=""> Vons </h2>
+            </div>
+            <div class="footerBars">
+                <div class="footer2"></div>
+                <div class="footer3"></div>
+            </div>
         </figure>
 
-        <figure class="col-xs-6"  data-store="ralphs" >
-            <div class="shop">
+        <figure class="col-xs-0 col-md-2 col-lg-2"></figure>
+        <figure class="col-xs-12 col-md-5 col-lg-4" data-store="ralphs">
+            <div class="shop  box">
                 <!--<img src="/resources/images/food3.jpg"/>-->
-                <h2 class="name"> Ralph's</h2></div>
-        </figure>
+                <h2 class=""> Ralph's</h2>
+            </div>
 
+            <div class="footerBars">
+                <div class="footer2"></div>
+                <div class="footer3"></div>
+            </div>
+        </figure>
+        <figure class="col-xs-0col-md-0 col-lg-1"></figure>
     </div>
+    <div class="row ">
 
-    <!--<div class="row marketRow"><div class ="col-xs-12"></div></div>-->
 
-
-    <div class="row marketRow ">
-        <figure class="col-xs-6" data-store="tjs">
-            <div class="shop">
+        <figure class="col-xs-0 col-md-0 col-lg-1"></figure>
+        <figure class="col-xs-12 col-md-5 col-lg-4" data-store="tjs">
+            <div class="shop  box">
                 <!--<img src="/resources/images/food2.jpg"/>-->
-                <h2 class="name"> Sunshine Market </h2></div>
+                <h2 class=""> Sunshine Market </h2>
+            </div>
+
+            <div class="footerBars">
+                <div class="footer2"></div>
+                <div class="footer3"></div>
+            </div>
         </figure>
 
-        <figure class="col-xs-6" data-store="wholeFoods">
-            <div class="shop">
+        <figure class="col-xs-0 col-md-2 col-lg-2"></figure>
+        <figure class="col-xs-12 col-md-5 col-lg-4" data-store="wholeFoods">
+            <div class="shop  box">
                 <!--<img src="/resources/images/food4.jpg"/>-->
-                <h2 class="name"> Whole Foods</h2></div>
+                <h2 class=""> Whole Foods</h2>
+            </div>
+
+            <div class="footerBars">
+                <div class="footer2"></div>
+                <div class="footer3"></div>
+            </div>
         </figure>
+        <figure class="col-xs-0 col-md-0 col-lg-1"></figure>
     </div>
 
 </section>
