--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <img id="loading-cart" src="resources/images/favicon.png"/>
 </div>
 
-<div id="page-title" class="title-cover">
+<div id="page-title" class=" title-cover">
     <div id="cover"></div>
     <div id="title-inner" onclick="goToPage('_homePage')" class="initial">Fetch</div>
 </div>
@@ -551,21 +551,22 @@
 
         currentPageChanged: null,
         addNotification: function (notification) {
+
+            loader.notificationSound.play();
             var e = document.createElement('div');
             e.className = "notification";
             e.innerHTML = notification;
             document.getElementById("notifications").appendChild(e);
+
             setTimeout(function () {
-                $(e).css("transform", "translateX(-400px)")
-                loader.notificationSound.play();
+                $(e).css("transform", "translateX(-400px)");
             }, 100);
             setTimeout(function () {
                 e.firstChild.dataset.changepage = "false";
                 $(e).children().trigger("click");
-            }, 5000);
+            }, 10000);
         }
         ,
-
         closeNotification: function (page, element) {
 
             var p = element.parentNode;
@@ -783,6 +784,7 @@
 
         var latLng = {lat: loader.loc.lat, lng: loader.loc.lng};
         var zoom = 16;
+        console.log(loader.loc)
         if (loader.loc.hasOwnProperty("zoom")) {
             zoom = loader.loc.zoom;
         }
@@ -940,7 +942,8 @@
 
 
         pageInit();
-        /*for (var j = 0; j < allPages.length; j++) {
+		/*
+        for (var j = 0; j < allPages.length; j++) {
             $('#page-content').append('<div id="section-' + j + '"></div>');
             for (var i = 0; i < allPages[j].length; i++) {
                 var whichid = allPages[j][i];
@@ -963,12 +966,10 @@
         if (timeup) {
             $("#page-title").removeClass('title-cover');
         }
-		
-		
         loader.hideInProgress();
         setTimeout(function () {
             $("#title-inner").removeClass('initial');
-        }, 700);
+        }, 1000);
         setTimeout(function () {
 //            if (done) {
             $("#page-title").removeClass('title-cover');
