--- a/allPages.html
+++ b/allPages.html
@@ -810,7 +810,7 @@
         </div>
         <div class="col-xs-12 col-md-8 col-md-offset-2">
             <div>
-                <img style="max-width: 300px;" class="img-circle" id="confirmTicket_img" src="images/profiles/driver.png">
+                <img style="max-width: 300px;" class="img-circle" id="confirmTicket_img" src="images/profiles/soheil.png">
             </div>
             <div id="confirmTicket_icon"></div>
             <div id="confirmTicket_name">
@@ -819,8 +819,8 @@
         </div>
         <div id="user-price-display" class="col-xs-12 col-md-8 col-md-offset-2">
             <h5>Total Price</h5>
-            <h6>$<span id="user-price-total">55.00</span></h6>
-            <h4>&nbsp;($<span id="user-price">50.00</span> + 10% Driver Delivery Fee)</h4>
+            <h6>$<span id="user-price-total">8.66</span></h6>
+            <h4>&nbsp;($<span id="user-price">7.87</span> + 10% Driver Delivery Fee)</h4>
         </div>
         <div class="col-xs-12 col-md-8 col-md-offset-2">
             <h5>Receipt</h5>
@@ -869,7 +869,7 @@
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 userIcon">
                 <!--<h2>Account Information</h2>-->
                 <div id="rateDriver-image-content">
-                    <img class="img-circle" id="rateDriver-img" src="images/profiles/driver.png">
+                    <img class="img-circle" id="rateDriver-img" src="images/profiles/soheil.png">
                 </div>
             </div>
 
@@ -1304,8 +1304,8 @@
     <div class="row">
         <div id="driver-price-display" class="col-xs-12 col-md-8 col-md-offset-2">
             <h5>Total Price</h5>
-            <h6>$<span id="driver-price-total">55.00</span></h6>
-            <h4>&nbsp;($<span id="driver-price">50.00</span> + 10% Driver Delivery Fee)</h4>
+            <h6>$<span id="driver-price-total">8.66</span></h6>
+            <h4>&nbsp;($<span id="driver-price">7.87</span> + 10% Driver Delivery Fee)</h4>
         </div>
         <div class="col-xs-12 col-md-8 col-md-offset-2">
             <h5>Receipt</h5>
